RAG Pipeline implementation and proper rendering of LLM Explanation